<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="main">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="team">Команда</string>
    <string name="vacancy_search">Поиск вакансий</string>
    <string name="enter_query">Введите запрос</string>
    <string name="empty_list">Список пуст</string>
    <string name="description_tittle">Над приложением работали</string>
    <string name="qa_name">Анна Архиповна Тестирование</string>
    <string name="grade_name">Ольга Петровна Оценка</string>
    <string name="design_name">Вениамин Петрович Дизайн</string>
    <string name="dev_name">Антон Андроидович</string>
    <string name="vacancy_detail">Вакансия</string>
    <string name="salary">Зарплата не указана</string>
    <string name="text_employer">Название организации</string>
    <string name="address_employer">Адрес организации</string>
    <string name="experience_title">Требуемый опыт</string>
    <string name="text_list">Текст списком</string>
    <string name="job_description">Описание вакансии</string>
    <string name="responsibilities_title">Обязанности</string>
    <string name="requirements_title">Требования</string>
    <string name="conditions_title">Условия</string>
    <string name="key_skills_title">Ключевые навыки</string>
    <string name="vacancy_not_found">Вакансия не найдена или \nудалена</string>
    <string name="not_found_counter_vacancy_text">Таких вакансий нет</string>
    <string name="network_error_text">Нет интернета</string>
    <string name="not_found_text">Не удалось получить\nсписок вакансий</string>
    <string name="not_found_region">Не удалось получить\nсписок</string>
    <string name="server_error_text">Ошибка сервера</string>
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="place_of_work">Место работы</string>
    <string name="industries">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="check_box_text">Не показывать без зарплаты</string>
    <string name="button_filter_reset">Сбросить</string>
    <string name="button_filter_apply">Применить</string>
    <string name="filter_work_place_text">Выбор места работы</string>
    <string name="filter_country">Страна</string>
    <string name="filter_region">Регион</string>
    <string name="choice_country">Выбор страны</string>
    <string name="industry_header">Выбор отрасли</string>
    <string name="region_choice_header">Выбор региона</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="enter_region">Введите регион</string>
    <string name="button_choice">Выбрать</string>
    <string name="region_not_found">Такого региона нет</string>
    <string name="cant_get_list">Не удалось получить\nсписок</string>
    <string name="industry_not_found">Такой отрасли нет</string>
</resources>
