<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="136dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/bottom_navigation_indent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_indent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_indent" />

    <TextView
        android:id="@+id/tvSearchHeader"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/toolbar_margin_indent"
        android:text="@string/vacancy_search"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@drawable/filter_icon"
        app:layout_constraintBottom_toBottomOf="@id/tvSearchHeader"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toTopOf="@id/tvSearchHeader" />

    <FrameLayout
        android:id="@+id/flSearchElements"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/tvSearchHeader">

        <EditText
            android:id="@+id/etSearchVacancy"
            style="@style/SearchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/enter_query" />

        <ImageButton
            android:id="@+id/ibClearQuery"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="@dimen/team_indent"
            android:backgroundTint="@android:color/transparent"
            android:visibility="gone"
            app:srcCompat="@drawable/search_clear_icon" />

        <ImageButton
            android:id="@+id/ibClearSearch"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="@dimen/team_indent"
            android:backgroundTint="@android:color/transparent"
            app:srcCompat="@drawable/search_icon" />

    </FrameLayout>

    <TextView
        android:id="@+id/vacancyCounter"
        style="@style/vacancyCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:paddingStart="@dimen/indent_12"
        android:paddingTop="@dimen/indent_4"
        android:paddingEnd="@dimen/indent_12"
        android:paddingBottom="@dimen/indent_4"
        android:text="@string/not_found_counter_vacancy_text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/topGuideline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewVacancy"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/topGuideline"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/hh_blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/topGuideline" />

    <ImageView
        android:id="@+id/mainPlaceholder"
        android:layout_width="@dimen/width_placeholder"
        android:layout_height="@dimen/height_placeholder"
        android:src="@drawable/placeholder_search_fragment"
        app:layout_constraintBottom_toTopOf="@id/bottomGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/topGuideline" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/networkErrorPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="networkErrorImage,networkErrorText" />

    <ImageView
        android:id="@+id/networkErrorImage"
        android:layout_width="@dimen/width_placeholder"
        android:layout_height="@dimen/height_placeholder"
        android:src="@drawable/placeholder_network_error"
        app:layout_constraintBottom_toTopOf="@id/bottomGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/topGuideline" />

    <TextView
        android:id="@+id/networkErrorText"
        style="@style/Medium22Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_16"
        android:text="@string/network_error_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/networkErrorImage" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/notFoundPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="notFoundImage,notFoundText" />

    <ImageView
        android:id="@+id/notFoundImage"
        android:layout_width="@dimen/width_placeholder"
        android:layout_height="@dimen/height_placeholder"
        android:src="@drawable/placeholder_not_found"
        app:layout_constraintBottom_toTopOf="@id/bottomGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/topGuideline" />

    <TextView
        android:id="@+id/notFoundText"
        style="@style/Medium22Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_16"
        android:gravity="center"
        android:text="@string/not_found_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notFoundImage" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/serverErrorPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="serverErrorImage,serverErrorText" />

    <ImageView
        android:id="@+id/serverErrorImage"
        android:layout_width="@dimen/width_placeholder"
        android:layout_height="@dimen/height_placeholder"
        android:src="@drawable/placeholder_server_error_search"
        app:layout_constraintBottom_toTopOf="@id/bottomGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/topGuideline" />

    <TextView
        android:id="@+id/serverErrorText"
        style="@style/Medium22Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_16"
        android:gravity="center"
        android:text="@string/server_error_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serverErrorImage" />

</androidx.constraintlayout.widget.ConstraintLayout>
